force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Engagement-wide audit sink. Written by automation only: break-glass grants/revokes (INT-004 trigger), Apex-managed share insert/delete (INT-019 trigger), and future regional-access overrides. Never a user DML target.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>