force-app/main/default/objects/Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Break_Glass_Grant</fullName><default>false</default><label>Break-Glass Grant</label></value>
            <value><fullName>Break_Glass_Revoke</fullName><default>false</default><label>Break-Glass Revoke</label></value>
            <value><fullName>Manual_Share_Insert</fullName><default>false</default><label>Manual Share Insert</label></value>
            <value><fullName>Manual_Share_Delete</fullName><default>false</default><label>Manual Share Delete</label></value>
            <value><fullName>Regional_Access_Override</fullName><default>false</default><label>Regional Access Override</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>