force-app/main/default/objects/Audit_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Required on Break_Glass_Grant; captured from the wrapper Flow's required input.</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>