force-app/main/default/objects/Audit_Log__c/fields/Target_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Id__c</fullName>
    <label>Target Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>