force-app/main/default/objects/Audit_Log__c/fields/Target_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Type__c</fullName>
    <label>Target Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>